// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarComponent should render a snackbar when message recived 1`] = `
<termo-snackbar
  el={[Function ElementRef]}
  messagesSub={[Function Subscriber]}
  snackbar={[Function MDCSnackbar]}
  snackbarService={[Function MockSnapshotService]}
>
  <aside
    class="mdc-snackbar"
  >
    <div
      aria-relevant="additions"
      class="mdc-snackbar__surface"
      role="status"
    >
      <div
        aria-atomic="false"
        class="mdc-snackbar__label"
      >
        Something is wrong
      </div>
    </div>
  </aside>
</termo-snackbar>
`;

exports[`SnackbarComponent should render the snackbar component 1`] = `
<termo-snackbar
  el={[Function ElementRef]}
  messagesSub={[Function Subscriber]}
  snackbar={[Function MDCSnackbar]}
  snackbarService={[Function MockSnapshotService]}
>
  <aside
    class="mdc-snackbar"
  >
    <div
      aria-relevant="additions"
      class="mdc-snackbar__surface"
      role="status"
    >
      <div
        aria-atomic="false"
        class="mdc-snackbar__label"
      />
    </div>
  </aside>
</termo-snackbar>
`;
